5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1800_2573.log
== TEST (2019-06-13 09:49:12) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a),dtype = float)
d = 0
for i in range(size(a)):
	c[d] = a[d]/((b[d])**2)
	d += 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:51:31) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a),dtype = float)
d = 0
for i in range(size(a)):
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(a)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:52:11) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a),dtype = float)
d = 0
for i in range(size(a)):
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(c)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:53:28) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a),dtype = float)
d = 0
for i in range(size(a)):
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(c)
print('O MAIOR IMC DA TURMA EH:'e)
-- ERROR:
File "XXXX", line 11
    print('O MAIOR IMC DA TURMA EH:'e)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:53:34) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a),dtype = float)
d = 0
for i in range(size(a)):
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(c)
print('O MAIOR IMC DA TURMA EH:',e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:54:12) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a),dtype = float)
d = 0
for i in range(size(a)):
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(c)
print('O MAIOR IMC DA TURMA EH:',e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:54:28) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a),dtype = float)
d = 0
for i in range(size(a))-1:
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(c)
print('O MAIOR IMC DA TURMA EH:',e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:54:28) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a),dtype = float)
d = 0
for i in range(size(a))-1:
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(c)
print('O MAIOR IMC DA TURMA EH:',e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:55:03) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a))
d = 0
for i in range(size(a)):
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(c)
print('O MAIOR IMC DA TURMA EH:',e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:55:17) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a))
d = 0
for i in range(size(a)):
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(c)
print('O MAIOR IMC DA TURMA EH:',e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:00:35) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = zeros(size(a))
d = 0
for i in range(size(a)):
	c[d] = round(a[d]/((b[d])**2),2)
	d += 1
print(c)
e = max(c)
print('O MAIOR IMC DA TURMA EH:',e)
if e < 17:
	print('muito abaixo do peso')
elif e >= 17 and e<=18.49:
	print('abaixo do peso')
elif e>= 18.50 and e<= 24.99:
	print('peso normal')
elif e >= 25 and <= 29.99:
	print('acima do peso')
elif e >= 25 and <= 29.99:
	print('acima do peso')
elif e >= 35 and <= 39.99:
	print('obesidade severa')
-- ERROR:
File "XXXX", line 18
    elif e >= 25 and <= 29.99:
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
